word wrap fix

--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -31,7 +31,7 @@
 	background-clip: initial;
 	font-family: "Roboto";
 	font-weight: bold;
-    word-wrap:break-word;	
+    word-wrap:break-all;	
 
     line-height: 120%;
 }
